compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__type_named_else.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 663
expression: "\npub record Else {\n  Else\n}\n\npub fn main() {\n  Else\n}\n"
---
----- SOURCE CODE

pub record Else {
  Else
}

pub fn main() {
  Else
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).
-export_type(['else'/0]).

-type 'else'() :: 'else'.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> 'else'().
main() ->
    'else'.
