compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__type_named_module_info.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 666
expression: "\npub record ModuleInfo {\n    ModuleInfo\n}\n\npub fn main() {\n    ModuleInfo\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).
-export_type([module_info/0]).

-type module_info() :: module_info.

-file("/root/project/test/my/mod.rakun", 6).
-spec main() -> module_info().
main() ->
    module_info.
