compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__windows_file_escaping_bug.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 952
expression: "pub fn main() { Nil }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("C:\\root\\project\\test\\my\\mod.rakun", 1).
-spec main() -> nil.
main() ->
    nil.
